--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,5 @@ langchain==1.2.10
 langchain-core==1.2.12
 langchain-google-genai==4.2.0
 sqlalchemy==2.0.46
+streamlit==1.54.0
+psycopg2-binary==2.9.11
